Move Competitors to own admin page

--- a/SailScores.Web/Areas/Identity/Pages/Account/Manage/UpdateProfile.cshtml
+++ b/SailScores.Web/Areas/Identity/Pages/Account/Manage/UpdateProfile.cshtml
@@ -9,7 +9,7 @@
 <a class="btn btn-lg btn-outline-warning float-md-right" href="/Identity/Account/Manage/ChangePassword" 
    title="Change Password">Change Password</a>
 <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-8 col-lg-6">
         <form id="update-profile-form" method="post">
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
