--- a/SailScores.Web/Views/ClubRequest/Index.cshtml
+++ b/SailScores.Web/Views/ClubRequest/Index.cshtml
@@ -103,7 +103,7 @@
             </div>
             <div class="row">
                 <div class="col-md-3">
-                    <input type="submit" value="Submit" class="btn btn-primary btn-block" />
+                    <input type="submit" value="Submit" class="btn btn-success btn-block" />
                 </div>
                 <div class="col-md-3">
                     <a asp-controller="Home" asp-action="Index"
