--- a/SailScores.Web/Views/Shared/_Layout.cshtml
+++ b/SailScores.Web/Views/Shared/_Layout.cshtml
@@ -62,7 +62,7 @@
         </div>
     </header>
 
-    <div class="container body-content">
+    <div class="container-lg body-content">
         <main class="col-12 py-md-3 pl-md-5 bd-content" role="main">
             @RenderBody()
         </main>
