--- a/SailScores.Web/Views/Account/Login.cshtml
+++ b/SailScores.Web/Views/Account/Login.cshtml
@@ -13,7 +13,7 @@
 }
 <h2>@ViewData["Title"]</h2>
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-6 col-xl-4">
         <section>
             <form asp-route-returnurl="@ViewData["ReturnUrl"]" method="post">
                 <h4>Use a local account to log in.</h4>
