--- a/SailScores.Web/Views/Admin/_SeasonList.cshtml
+++ b/SailScores.Web/Views/Admin/_SeasonList.cshtml
@@ -1,38 +1,54 @@
 ﻿@model IEnumerable<SailScores.Core.Model.Season>
-
-<div class="card">
-    <div class="card-header" id="seasonsHeading">
-        <h5>
-            <a id="seasons" class="collapsed" data-toggle="collapse" href="#collapseSeasons" aria-expanded="false" aria-controls="collapseSeasons">
-                Seasons
+<div id="seasonsdiv">
+<div class="row">
+    <div class="col-10 col-sm-8 col-md-5 col-lg-4">
+        <h3 class="float-left">
+            <a id="seasons">Seasons</a>
+            <a class="text-primary"
+                data-container="body"
+                data-toggle="popover"
+                data-placement="top"
+                data-trigger="focus hover"
+                data-content="Seasons typically repeat each year. Every series must belong to a season. They help with links and statistics.">
+                <span class="far fa-question-circle"></span>
             </a>
-        </h5>
+        </h3>
     </div>
-    <div id="collapseSeasons" class="collapse" aria-labelledby="seasonsHeading" data-parent="#accordion">
-        <div class="card-body">
-            <p>
-                <a class="btn btn-primary" asp-action="Create" asp-controller="Season">
-                    Create
-                </a>
-            </p>
-            @foreach (var item in Model)
-            {
-                <div class="row border-bottom mb-1 pb-1">
-                    <div class="col-6 col-sm-4 col-md-4">
-                        @Html.DisplayFor(modelItem => item.Name)
-                    </div>
-                    <div class="col-6 col-sm-4 col-md-3">
-                        @Html.DisplayFor(modelItem => item.Start)
-                    </div>
-                    <div class="col-6 col-sm-4 col-md-3">
-                        @Html.DisplayFor(modelItem => item.End)
-                    </div>
-                    <div class="col-6 col-sm-4 col-md-2">
-                        @Html.ActionLink("Edit", "Edit", "Season", new { id = item.Id }) |
-                        @Html.ActionLink("Delete", "Delete", "Season", new { id = item.Id })
-                    </div>
-                </div>
-            }
+    <div class="col-2 col-sm-4">
+        <a class="btn btn-primary"
+            asp-action="Create"
+            asp-controller="Season">
+            <span class="fas fa-plus"></span>
+            <span class="d-none d-sm-inline">
+                New Season
+            </span>
+        </a>
+    </div>
+</div>
+@foreach (var item in Model)
+{
+    <div class="row border-bottom mt-1 mb-1 pt-1 pb-1 ml-md-2">
+        <div class="col-12 col-sm-6 col-md-4">
+            <a class="btn btn-sm btn-outline-danger"
+                asp-action="Delete"
+                asp-controller="Season"
+                asp-route-id="@item.Id"
+                title="Delete">
+                <span class="fas fa-trash"></span>
+            </a> &nbsp;
+            <a class="btn btn-sm btn-outline-primary"
+                asp-action="Edit"
+                asp-controller="Season"
+                asp-route-id="@item.Id"
+                title="Edit">
+                <span class="fas fa-pen"></span>
+            </a> &nbsp;
+            @Html.DisplayFor(modelItem => item.Name)
+        </div>
+        <div class="col-sm-8 col-md-6">
+            @Html.DisplayFor(modelItem => item.Start) -
+            @Html.DisplayFor(modelItem => item.End)
         </div>
     </div>
+}
 </div>
